# treecf

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
concepts/backends/: index.html
concepts/calibration/: index.html
concepts/coalitions/: index.html
concepts/constraints/: index.html
concepts/missing-values/: index.html
concepts/models/: index.html
concepts/plausibility/: index.html
concepts/targets/: index.html
docs/: api.md  benchmarks-genetic-rust.md  faq.md  getting-started.md  how-it-works.md  index.md
docs/concepts/: backends.md  calibration.md  coalitions.md  constraints.md  missing-values.md  models.md  plausibility.md  targets.md
docs/notebooks/: 01-quickstart.ipynb  02-credit-risk-tutorial.ipynb  03-no-solver-environments.ipynb
faq/: index.html
getting-started/: index.html
how-it-works/: index.html
notebooks/01-quickstart/: index.html
notebooks/02-credit-risk-tutorial/: index.html
notebooks/03-no-solver-environments/: index.html
rust/: Cargo.toml  pyproject.toml
rust/src/: cells.rs  constraints.rs  ga.rs  ir.rs  lib.rs  py.rs
scripts/: bench_batch.py  bench_genetic.py  bench_vs_competitors.py  gen_parity_fixtures.py  make_notebooks.py
search/: search_index.json
src/treecf/: __init__.py  _errors.py  _json.py  api.py  batch.py  mining.py  objective.py  plausibility.py  targets.py  viz.py  viz_batch.py
src/treecf/aim/: __init__.py  build.py  cells.py  model.py
src/treecf/backends/: __init__.py  base.py  cpsat.py  genetic.py  genetic_rust.py  highs.py
src/treecf/constraints/: __init__.py  compile.py  flatten.py  objects.py  parser.py
src/treecf/ir/: __init__.py  conformance.py  evaluate.py  flatten.py  model.py
src/treecf/ir/parsers/: __init__.py  catboost.py  json_dump.py  lightgbm.py  sklearn.py  xgboost.py
tests/: conftest.py  test_api.py  test_batch.py  test_coalitions.py  test_diversity.py  test_ladder.py  test_mining.py  test_nan_semantics.py  test_objective.py  test_package.py  test_plausibility.py  test_prune.py  test_targets.py  test_value_policy.py  test_viz.py  test_viz_batch.py
tests/aim/: test_cells.py  test_fixed_point.py
tests/backends/: test_genetic.py
tests/bench/: test_perf_smoke.py
tests/constraints/: test_compile.py  test_flatten.py  test_objects.py  test_parser.py
tests/exactness/: brute_force.py  test_exactness_cpsat.py  test_linear_constraints.py
tests/fixtures/parity/: 01-basic-lt-le.json  02-bounds-mix.json  03-nan-fixed-factual.json  04-allow-missing-to-nan.json  05-allow-missing-from-nan.json  06-linear-policies.json  07-flags-onehot-implies.json  08-plausibility.json  09-infeasible.json  10-real-xgboost.json
tests/ir/: harness.py  test_conformance_catboost.py  test_conformance_lightgbm.py  test_conformance_sklearn.py  test_conformance_xgboost.py  test_evaluate.py  test_evaluate_batch.py  test_flatten.py  test_model.py
tests/parity/: harness.py  test_golden_python.py
tests/property/: test_constraints_hypothesis.py
tests/rust/: conftest.py  test_constraints_conformance.py  test_ga_batch.py  test_ga_parity.py  test_genetic_rust_backend.py  test_ir_conformance.py
