[project]
name = "treecf"
version = "0.1.0.dev0"
description = "Constrained, threshold-aware counterfactual explanations for tree ensembles (XGBoost, LightGBM, CatBoost, sklearn) via CP-SAT and a solver-free genetic backend."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Wlazlo", email = "wlazlo.daniel@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "counterfactual",
    "xai",
    "interpretability",
    "recourse",
    "gbdt",
    "xgboost",
    "lightgbm",
    "catboost",
    "cp-sat",
    "credit-risk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
cpsat = ["ortools>=9.8"]
# highs = ["highspy"]  # v0.2 (spec §8.4): MILP adapter; interface frozen in v0.1
xgboost = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.3"]
catboost = ["catboost>=1.2"]
sklearn = ["scikit-learn>=1.4"]
viz = ["matplotlib>=3.8"]
all = [
    "ortools>=9.8",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "ortools>=9.8",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.9",
    "mkdocs-jupyter>=0.24",
]

[project.urls]
Homepage = "https://github.com/wlazlod/treecf"
Documentation = "https://wlazlod.github.io/treecf/"
Issues = "https://github.com/wlazlod/treecf/issues"
Changelog = "https://github.com/wlazlod/treecf/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/treecf"]

[tool.hatch.build.targets.sdist]
include = [
    "src/treecf",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "build", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["N803", "N806", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/treecf"]

[[tool.mypy.overrides]]
module = [
    "ortools.*",
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "sklearn.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -m 'not bench'"
markers = ["bench: non-gating performance smoke benchmarks (run with -m bench)"]
filterwarnings = [
    "error",
    # sklearn warns when a wrapper fitted on a DataFrame-less array is queried with
    # plain ndarrays; harmless in conformance tests (recorded in CLAUDE.md)
    "ignore:X does not have valid feature names:UserWarning",
]
