[project]
name = "treecf"
version = "0.0.1"
description = "Constrained, threshold-aware counterfactual explanations for tree ensembles (XGBoost, LightGBM, CatBoost, sklearn) via CP-SAT and a solver-free genetic backend."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Daniel Wlazlo", email = "wlazlo.daniel@gmail.com" }]
requires-python = ">=3.11"
keywords = [
    "counterfactual",
    "xai",
    "interpretability",
    "recourse",
    "gbdt",
    "xgboost",
    "lightgbm",
    "catboost",
    "cp-sat",
    "credit-risk",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
xgboost = ["xgboost>=2.0"]
lightgbm = ["lightgbm>=4.3"]
catboost = ["catboost>=1.2"]
sklearn = ["scikit-learn>=1.4"]
viz = ["matplotlib>=3.8"]
all = [
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
dev = [
    "maturin>=1.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "catboost>=1.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "pymdown-extensions>=10.9",
    "mkdocs-jupyter>=0.24",
    "ipykernel>=6.29",
]

[project.urls]
Homepage = "https://github.com/wlazlod/treecf"
Documentation = "https://wlazlod.github.io/treecf/"
Issues = "https://github.com/wlazlod/treecf/issues"
Changelog = "https://github.com/wlazlod/treecf/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
manifest-path = "rust/Cargo.toml"
module-name = "treecf._treecf_core"
features = ["extension-module"]
include = [{ path = "README.md", format = "sdist" }, { path = "LICENSE", format = "sdist" }]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["dist", "build", "docs"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["N803", "N806", "RUF001", "RUF002"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]

[tool.mypy]
# no python_version pin: numpy's stubs use PEP 695 `type` statements, which mypy
# rejects when told to type-check as 3.11 while running under 3.12/3.13
strict = true
files = ["src/treecf"]

[[tool.mypy.overrides]]
module = [
    "xgboost.*",
    "lightgbm.*",
    "catboost.*",
    "sklearn.*",
    "matplotlib.*",
    "treecf._treecf_core",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers -m 'not bench'"
markers = [
    "bench: non-gating performance smoke benchmarks (run with -m bench)",
    "rust: cross-language tests requiring the dev Rust extension (maturin develop)",
]
filterwarnings = [
    "error",
    # sklearn warns when a wrapper fitted on a DataFrame-less array is queried with
    # plain ndarrays; harmless in conformance tests (recorded in CLAUDE.md)
    "ignore:X does not have valid feature names:UserWarning",
    # lightgbm 4.5 still passes force_all_finite to scikit-learn 1.6 (renamed there);
    # only affects the pinned conformance-matrix cell (recorded in CLAUDE.md)
    "ignore:'force_all_finite' was renamed to 'ensure_all_finite':FutureWarning",
]
