[package]
name = "treecf-core"
version = "0.0.1"
edition = "2021"
description = "Rust genetic counterfactual core for treecf (dev-only until the benchmark gate)"
license = "MIT"

[lib]
name = "_treecf_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29", features = ["abi3-py311"], optional = true }
numpy = { version = "0.29", optional = true }
rayon = "1.12"
rand = "0.9"
rand_distr = "0.5"
rand_pcg = "0.9"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# `cargo test` runs featureless (pure Rust, no libpython); maturin enables these
python = ["dep:pyo3", "dep:numpy"]
extension-module = ["python", "pyo3/extension-module"]

[profile.release]
lto = true
codegen-units = 1
