# Dev-only maturin config (migration P2-P6): build into the venv with
#   uv run maturin develop --release -m rust/Cargo.toml
# The root package stays hatchling until the P6 benchmark gate decides.
[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "treecf-core"
version = "0.0.1"
requires-python = ">=3.11"

[tool.maturin]
features = ["extension-module"]
module-name = "_treecf_core"
